[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Player/PlayerShip.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.08276

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.125806, 0.612903 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.497207, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 8.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
trail_size_modifier = SubResource( 8 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 12.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -17, 0 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="IdleParticles" type="Particles2D" parent="."]
position = Vector2( -36, 0 )
process_material = SubResource( 6 )

[node name="MoveParticles" type="Particles2D" parent="."]
position = Vector2( -36, 0 )
amount = 16
process_material = SubResource( 9 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
